--- a/style.css
+++ b/style.css
@@ -7,4 +7,23 @@
 
 .codeDiv {
   display: inline-block;
+  font-size: 15px;
+}
+
+#codeName {
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+}
+
+#fullscreenBtn {
+  display: inline-block;
+  vertical-align: top;
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 5px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
 }
